# ros_navigation_ws

gmapping/src/get_map_data/: CMakeLists.txt  package.xml
gmapping/src/get_map_data/launch/: map_data.launch
gmapping/src/get_map_data/src/: call_map_service.py
gmapping/src/my_mapping_launcher/: CMakeLists.txt  package.xml
gmapping/src/my_mapping_launcher/launch/: my_gmapping_launch.launch  rviz_gmapping.launch
gmapping/src/my_mapping_launcher/params/: gmapping_params.yaml
gmapping/src/my_mapping_launcher/rviz_config/: gmapping_config.rviz
gmapping/src/provide_map/: CMakeLists.txt  package.xml
gmapping/src/provide_map/launch/: map_server.launch
gmapping/src/static_transform/: CMakeLists.txt  frames.gv  package.xml
gmapping/src/static_transform/launch/: kinect_tf.launch
localization/src/: frames.gv
localization/src/get_pose/: CMakeLists.txt  package.xml
localization/src/get_pose/launch/: get_pose_service.launch
localization/src/get_pose/src/: get_pose_service.py
localization/src/get_pose/srv/: GetPose.srv
localization/src/initialize_particles/: CMakeLists.txt  package.xml
localization/src/initialize_particles/launch/: disperse_and_localize.launch
localization/src/my_amcl_launcher/: CMakeLists.txt  package.xml
localization/src/my_amcl_launcher/launch/: amcl.launch  my_amcl_launch.launch  rviz.launch
localization/src/my_amcl_launcher/maps/: my_map.pgm  my_map.yaml
localization/src/my_amcl_launcher/rviz_config/: amcl_config.rviz
project_summit_xl/src/my_summit_localization/: CMakeLists.txt  package.xml
project_summit_xl/src/my_summit_mapping/: CMakeLists.txt  frames.gv  package.xml
project_summit_xl/src/my_summit_path_planning/: CMakeLists.txt  package.xml
project_summit_xl/src/record_spots/: CMakeLists.txt  package.xml
project_summit_xl/src/record_spots/launch/: load_saved_spots.launch  rs_service.launch
project_summit_xl/src/record_spots/saved_spots/: save1.yaml
project_summit_xl/src/record_spots/src/: spots_to_file.py
(+20 files in other folders)
