<?xml version="1.0"?>
<package format="2">
  <name>provide_map</name>
  <version>0.0.0</version>
  <description>The provide_map package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
