<?xml version="1.0"?>
<package format="2">
  <name>static_transform</name>
  <version>0.0.0</version>
  <description>The static_transform package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
