<?xml version="1.0"?>
<package format="2">
  <name>my_amcl_launcher</name>
  <version>0.0.0</version>
  <description>The my_amcl_launcher package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
